fixed heart alignment P-D

--- a/Styles/product-detail.css
+++ b/Styles/product-detail.css
@@ -36,6 +36,9 @@ body {
   background-color: black;
   color: white;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .main-img {
   width: 100%;
